k8s/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emp-ingress
  namespace: emp-system
spec:
  tls: []
  rules:
    - host: emp-dev.internal
